# Globetrotter

./: .dockerignore  Dockerfile  README.md  db.sqlite3  fly.toml  manage.py  pyproject.toml
Globetrotter/: asgi.py  settings.py  urls.py  wsgi.py
main_app/: admin.py  forms.py  models.py  urls.py  views.py  widget.py
main_app/migrations/: 0001_initial.py  0002_activity.py  0003_flight.py  0004_travelitinerary_end_date_alter_travelitinerary_notes.py  0005_rename_activity_name_activity_name.py  0006_remove_flight_arrival_date_remove_flight_destination_and_more.py  0007_alter_activity_options_remove_activity_date_time_and_more.py  0008_alter_activity_options_remove_activity_date_and_more.py  0009_alter_activity_options_remove_activity_date_time_and_more.py
main_app/static/css/: itinerary_detail.css  style.css
main_app/templates/: about.html  base.html  home.html
main_app/templates/activities/: create.html  delete.html  update.html
main_app/templates/auth/: login_form.html  signup_form.html
main_app/templates/flights/: create.html  update.html
main_app/templates/itineraries/: add_user.html  create.html  delete.html  detail.html  index.html  update.html  update_hotel.html  update_notes.html
